--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   overflow-x: hidden;
   position: relative;
 }
+
 header {
   height: 100vh;
   position: relative;
@@ -44,6 +45,7 @@ header {
   background-size: cover;
   color: #fff;
 }
+
 .slider-container {
   z-index: -10;
   width: 100%;
@@ -205,8 +207,7 @@ img {
 }
 
 .header__title {
-  max-width: 1140px;
-
+  /* max-width: 1140px; */
   flex: 1;
   max-width: 115rem;
   display: grid;
@@ -214,14 +215,13 @@ img {
   row-gap: 1.5rem;
   align-content: center;
   justify-content: center;
-
   align-items: start;
   justify-items: start;
 }
 
 h1 {
   color: #eee;
-  font-size: 3.8rem;
+  font-size: 3rem;
   line-height: 1.5;
   padding: 2rem;
 }
@@ -235,9 +235,11 @@ h4 {
   padding: 1.2rem;
   color: #b9b9b9;
 }
+
 .head-learn-more {
   margin: 2rem;
 }
+
 .header__img {
   padding-top: 5.5rem;
   width: 100%;
@@ -400,18 +402,23 @@ h4 {
 .operations__icon--1 {
   background-color: var(--color-secondary-opacity);
 }
+
 .operations__icon--2 {
   background-color: var(--color-primary-opacity);
 }
+
 .operations__icon--3 {
   background-color: var(--color-tertiary-opacity);
 }
+
 .operations__icon--1 svg {
   fill: var(--color-secondary-darker);
 }
+
 .operations__icon--2 svg {
   fill: var(--color-primary);
 }
+
 .operations__icon--3 svg {
   fill: var(--color-tertiary);
 }
@@ -442,7 +449,7 @@ h4 {
   transition: transform 1s;
 }
 
-.slide > img {
+.slide>img {
   /* Only for images that have different size than slide */
   width: 100%;
   height: 100%;
@@ -469,6 +476,7 @@ h4 {
   left: 6%;
   transform: translate(-50%, -50%);
 }
+
 .slider__btn--right {
   right: 6%;
   transform: translate(50%, -50%);
@@ -762,6 +770,7 @@ h4 {
   /* IN THE END */
   overflow: hidden;
 }
+
 .slide-head {
   position: absolute;
   top: 0;
@@ -775,12 +784,14 @@ h4 {
   /* THIS creates the animation! */
   transition: transform 1s;
 }
-.slide-head > img {
+
+.slide-head>img {
   /* Only for images that have different size than slide */
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
 .slider__btn-head {
   position: absolute;
   top: 50%;
@@ -796,10 +807,12 @@ h4 {
   font-size: 1rem;
   cursor: pointer;
 }
+
 .slider-head__btn--left {
   left: 2%;
   transform: translate(-50%, -50%);
 }
+
 .slider-head__btn--right {
   right: 2%;
   transform: translate(50%, -50%);
@@ -857,6 +870,7 @@ h4 {
 .section-videos {
   margin: 6rem 0.5rem 0 0.5rem;
 }
+
 .video-label-text {
   font-weight: 500;
   color: #aaa;
@@ -968,6 +982,7 @@ h4 {
 .person-info {
   font-size: 14px;
 }
+
 .view-recipe {
   background-color: #bf5600;
   color: black;
@@ -1002,4 +1017,43 @@ input {
   font-weight: 700;
   font-size: 1.8rem;
   cursor: pointer;
+}
+
+
+@media only screen and (max-width: 1200px) {
+  h1 {
+    color: #eee;
+    font-size: 2rem;
+    line-height: 1.5;
+    padding: 2rem;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  h1 {
+    color: #eee;
+    font-size: 1.5rem;
+    line-height: 1.5;
+    padding: 2rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .header__title {
+    display: block;
+  }
+
+  .marginforsearch {
+    margin-top: 0px;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .marginforsearch {
+    margin-top: -100px !important;
+  }
+}
+
+.marginforsearch {
+  margin-top: -200px;
 }
